--- a/index.html
+++ b/index.html
@@ -8,77 +8,171 @@
   </head>
   <body>
     <div class="film-section">
-      <div class="container">
-        <div class="header-main">
-          <div class="header-logo">
-            <div class="logo-main">
-              <img class="logo" src="./images/header/cinema-logo.svg" alt="#" />
-              <p class="kino">Kino</p>
-              <p class="area">area</p>
+      <header>
+        <div class="container">
+          <div class="header-main">
+            <div class="header-logo">
+              <div class="logo-main">
+                <img
+                  class="logo"
+                  src="./images/header/cinema-logo.svg"
+                  alt="#"
+                />
+                <p class="kino">Kino</p>
+                <p class="area">area</p>
+              </div>
+              <div class="logo-sites">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  style="fill: ; transform: ; msfilter: "
+                >
+                  <path
+                    d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721 4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973 4.02 4.02 0 0 1-1.771 2.22 8.073 8.073 0 0 0 2.319-.624 8.645 8.645 0 0 1-2.019 2.083z"
+                  ></path>
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  style="fill: ; transform: ; msfilter: "
+                >
+                  <path
+                    d="M20.947 8.305a6.53 6.53 0 0 0-.419-2.216 4.61 4.61 0 0 0-2.633-2.633 6.606 6.606 0 0 0-2.186-.42c-.962-.043-1.267-.055-3.709-.055s-2.755 0-3.71.055a6.606 6.606 0 0 0-2.185.42 4.607 4.607 0 0 0-2.633 2.633 6.554 6.554 0 0 0-.419 2.185c-.043.963-.056 1.268-.056 3.71s0 2.754.056 3.71c.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632 6.584 6.584 0 0 0 2.185.45c.963.043 1.268.056 3.71.056s2.755 0 3.71-.056a6.59 6.59 0 0 0 2.186-.419 4.615 4.615 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.187.043-.962.056-1.267.056-3.71-.002-2.442-.002-2.752-.058-3.709zm-8.953 8.297c-2.554 0-4.623-2.069-4.623-4.623s2.069-4.623 4.623-4.623a4.623 4.623 0 0 1 0 9.246zm4.807-8.339a1.077 1.077 0 0 1-1.078-1.078 1.077 1.077 0 1 1 2.155 0c0 .596-.482 1.078-1.077 1.078z"
+                  ></path>
+                  <circle cx="11.994" cy="11.979" r="3.003"></circle>
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  style="fill: ; transform: ; msfilter: "
+                >
+                  <path
+                    d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z"
+                  ></path>
+                </svg>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  style="fill: ; transform: ; msfilter: "
+                >
+                  <path
+                    d="M21.579 6.855c.14-.465 0-.806-.662-.806h-2.193c-.558 0-.813.295-.953.619 0 0-1.115 2.719-2.695 4.482-.51.513-.743.675-1.021.675-.139 0-.341-.162-.341-.627V6.855c0-.558-.161-.806-.626-.806H9.642c-.348 0-.558.258-.558.504 0 .528.79.65.871 2.138v3.228c0 .707-.127.836-.407.836-.743 0-2.551-2.729-3.624-5.853-.209-.607-.42-.852-.98-.852H2.752c-.627 0-.752.295-.752.619 0 .582.743 3.462 3.461 7.271 1.812 2.601 4.363 4.011 6.687 4.011 1.393 0 1.565-.313 1.565-.853v-1.966c0-.626.133-.752.574-.752.324 0 .882.164 2.183 1.417 1.486 1.486 1.732 2.153 2.567 2.153h2.192c.626 0 .939-.313.759-.931-.197-.615-.907-1.51-1.849-2.569-.512-.604-1.277-1.254-1.51-1.579-.325-.419-.231-.604 0-.976.001.001 2.672-3.761 2.95-5.04z"
+                  ></path>
+                </svg>
+              </div>
             </div>
-            <div class="logo-sites">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
-              >
-                <path
-                  d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721 4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973 4.02 4.02 0 0 1-1.771 2.22 8.073 8.073 0 0 0 2.319-.624 8.645 8.645 0 0 1-2.019 2.083z"
-                ></path>
-              </svg>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
-              >
-                <path
-                  d="M20.947 8.305a6.53 6.53 0 0 0-.419-2.216 4.61 4.61 0 0 0-2.633-2.633 6.606 6.606 0 0 0-2.186-.42c-.962-.043-1.267-.055-3.709-.055s-2.755 0-3.71.055a6.606 6.606 0 0 0-2.185.42 4.607 4.607 0 0 0-2.633 2.633 6.554 6.554 0 0 0-.419 2.185c-.043.963-.056 1.268-.056 3.71s0 2.754.056 3.71c.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632 6.584 6.584 0 0 0 2.185.45c.963.043 1.268.056 3.71.056s2.755 0 3.71-.056a6.59 6.59 0 0 0 2.186-.419 4.615 4.615 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.187.043-.962.056-1.267.056-3.71-.002-2.442-.002-2.752-.058-3.709zm-8.953 8.297c-2.554 0-4.623-2.069-4.623-4.623s2.069-4.623 4.623-4.623a4.623 4.623 0 0 1 0 9.246zm4.807-8.339a1.077 1.077 0 0 1-1.078-1.078 1.077 1.077 0 1 1 2.155 0c0 .596-.482 1.078-1.077 1.078z"
-                ></path>
-                <circle cx="11.994" cy="11.979" r="3.003"></circle>
-              </svg>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
-              >
-                <path
-                  d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z"
-                ></path>
-              </svg>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                style="fill: rgba(0, 0, 0, 1); transform: ; msfilter: "
-              >
-                <path
-                  d="M21.579 6.855c.14-.465 0-.806-.662-.806h-2.193c-.558 0-.813.295-.953.619 0 0-1.115 2.719-2.695 4.482-.51.513-.743.675-1.021.675-.139 0-.341-.162-.341-.627V6.855c0-.558-.161-.806-.626-.806H9.642c-.348 0-.558.258-.558.504 0 .528.79.65.871 2.138v3.228c0 .707-.127.836-.407.836-.743 0-2.551-2.729-3.624-5.853-.209-.607-.42-.852-.98-.852H2.752c-.627 0-.752.295-.752.619 0 .582.743 3.462 3.461 7.271 1.812 2.601 4.363 4.011 6.687 4.011 1.393 0 1.565-.313 1.565-.853v-1.966c0-.626.133-.752.574-.752.324 0 .882.164 2.183 1.417 1.486 1.486 1.732 2.153 2.567 2.153h2.192c.626 0 .939-.313.759-.931-.197-.615-.907-1.51-1.849-2.569-.512-.604-1.277-1.254-1.51-1.579-.325-.419-.231-.604 0-.976.001.001 2.672-3.761 2.95-5.04z"
-                ></path>
-              </svg>
+            <div class="header-links">
+              <a href="#" class="link">Афиша </a>
+              <a href="#" class="link">Медиа </a>
+              <a href="#" class="link">Фильмы </a>
+              <a href="#" class="link">Актёры </a>
+              <a href="#" class="link">Новости </a>
+              <a href="#" class="link">Подборки </a>
+              <a href="#" class="link">Категории </a>
+            </div>
+            <div class="header-right">
+              <img class="poisk" src="./images/header/Поиск.svg" alt="#" />
+              <button class="btn-1">Войти</button>
             </div>
           </div>
-          <div class="header-links">
-            <a href="#" class="link">Афиша </a>
-            <a href="#" class="link">Медиа </a>
-            <a href="#" class="link">Фильмы </a>
-            <a href="#" class="link">Актёры </a>
-            <a href="#" class="link">Новости </a>
-            <a href="#" class="link">Подборки </a>
-            <a href="#" class="link">Категории </a>
+          <div class="header-bottom">
+            <div class="header-title">
+              <p>Сейчас в кино</p>
+            </div>
+            <div class="header-middle">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="54"
+                height="2"
+                viewBox="0 0 54 2"
+                fill="none"
+              >
+                <path
+                  d="M1 1H52.5"
+                  stroke="white"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                />
+              </svg>
+            </div>
+            <div class="nav-links">
+              <a href="#" class="link-1">Все </a>
+              <a href="#" class="link-1"> Боевики </a>
+              <a href="#" class="link-1"> Приключения </a>
+              <a href="#" class="link-1">Комедии </a>
+              <a href="#" class="link-1">Фантастика </a>
+              <a href="#" class="link-1">Триллеры </a>
+              <a href="#" class="link-1"> Драма </a>
+            </div>
           </div>
-          <div class="header-right">
-            <img src="./images/header/Поиск.svg" alt="#" />
-            <button class="btn-1">Войти</button>
+          <div class="movie-boxes">
+            <div class="box-1">
+              <img src="./images/main/image 1.png" alt="#" />
+              <p class="pobeg">Побег из Претории</p>
+              <p class="triler">Триллер</p>
+              <div class="rating"><p>6.70</p></div>
+            </div>
+            <div class="box-1">
+              <img src="./images/main/image 2.png" alt="#" />
+              <p class="pobeg">Джокер</p>
+              <p class="triler">Триллер, драма, криминал</p>
+              <div class="rating"><p>8.50</p></div>
+            </div>
+            <div class="box-1">
+              <img src="./images/main/image 3.png" alt="#" />
+              <p class="pobeg">Звёздные войны: Скайуокер. Восход</p>
+              <p class="triler">Фантастика, фэнтези, боевик, приключения</p>
+              <div class="rating"><p>6.70</p></div>
+            </div>
+            <div class="box-1">
+              <img src="./images/main/image 4.png" alt="#" />
+              <p class="pobeg">Джентльмены</p>
+              <p class="triler">Боевик, комедия, криминал</p>
+              <div class="rating"><p>8.00</p></div>
+            </div>
+          </div>
+          <div class="movie-boxes-2">
+            <div class="box-1">
+              <img src="./images/main/image 5.png" alt="#" />
+              <p class="pobeg">Ford против Ferrari</p>
+              <p class="triler">Биография, спорт, драма, боевик</p>
+              <div class="rating"><p>8.10</p></div>
+            </div>
+            <div class="box-1">
+              <img src="./images/main/image 6.png" alt="#" />
+              <p class="pobeg">3022</p>
+              <p class="triler">Фантастика, триллер</p>
+              <div class="rating"><p>4.90</p></div>
+            </div>
+            <div class="box-1">
+              <img src="./images/main/image 7.png" alt="#" />
+              <p class="pobeg">
+                Хищные птицы: Потрясающая история <br />
+                Харли Квинн
+              </p>
+              <p class="triler">Боевик, криминал, комедия</p>
+              <div class="rating"><p>6.20</p></div>
+            </div>
+            <div class="box-1">
+              <img src="./images/main/image 8.png" alt="#" />
+              <p class="pobeg">Плохие парни навсегда</p>
+              <p class="triler">Боевик, комедия, криминал</p>
+              <div class="rating"><p>6.90</p></div>
+            </div>
+          </div>
+          <div class="section-btn">
+            <button class="btn-section">Все новинки</button>
           </div>
         </div>
-      </div>
+      </header>
     </div>
 
     <main></main>
