--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kinoarea</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css"
+      integrity="sha512-tS3S5qG0BlhnQROyJXvNjeEM4UpMXHrQfTGmbQ1gKmelCxlSEBUaxhRBj/EFTzpbP4RVSrpEikbmdJobCvhE3g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css"
+      integrity="sha512-sMXtMNL1zRzolHYKEujM2AqCLUR9F2C4/05cdbxjjLSRvMQIciEPCQZo++nk7go3BtSuK9kfa/s+a4f4i5pLkw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div class="film-section">
@@ -175,8 +189,358 @@
       </header>
     </div>
 
-    <main></main>
+    <main>
+      <div class="trailer-section">
+        <div class="container">
+          <div class="trailer-main">
+            <div class="trailer-title">
+              <p class="noviy">Новые трейлеры</p>
+              <div class="trailer-right">
+                <p class="trailer-right-par">Все трейлеры</p>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="27"
+                  height="16"
+                  viewBox="0 0 27 16"
+                  fill="none"
+                >
+                  <path
+                    d="M26.7071 8.70711C27.0976 8.31658 27.0976 7.68342 26.7071 7.2929L20.3431 0.928934C19.9526 0.53841 19.3195 0.538409 18.9289 0.928934C18.5384 1.31946 18.5384 1.95262 18.9289 2.34315L24.5858 8L18.9289 13.6569C18.5384 14.0474 18.5384 14.6805 18.9289 15.0711C19.3195 15.4616 19.9526 15.4616 20.3431 15.0711L26.7071 8.70711ZM-8.74228e-08 9L26 9L26 7L8.74228e-08 7L-8.74228e-08 9Z"
+                    fill="white"
+                  />
+                </svg>
+              </div>
+            </div>
+            <div class="movie-trailer">
+              <video
+                id="movie-trailer"
+                muted
+                autoplay
+                controls
+                src="./videos/F9 - Official Trailer 2.mp4"
+              ></video>
+            </div>
+            <div class="trailer-comment">
+              <div class="forsaj">
+                <p class="comment-name">Форсаж 9</p>
+                <div class="our-sites">
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="M19.633 7.997c.013.175.013.349.013.523 0 5.325-4.053 11.461-11.46 11.461-2.282 0-4.402-.661-6.186-1.809.324.037.636.05.973.05a8.07 8.07 0 0 0 5.001-1.721 4.036 4.036 0 0 1-3.767-2.793c.249.037.499.062.761.062.361 0 .724-.05 1.061-.137a4.027 4.027 0 0 1-3.23-3.953v-.05c.537.299 1.16.486 1.82.511a4.022 4.022 0 0 1-1.796-3.354c0-.748.199-1.434.548-2.032a11.457 11.457 0 0 0 8.306 4.215c-.062-.3-.1-.611-.1-.923a4.026 4.026 0 0 1 4.028-4.028c1.16 0 2.207.486 2.943 1.272a7.957 7.957 0 0 0 2.556-.973 4.02 4.02 0 0 1-1.771 2.22 8.073 8.073 0 0 0 2.319-.624 8.645 8.645 0 0 1-2.019 2.083z"
+                    ></path>
+                  </svg>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="M20.947 8.305a6.53 6.53 0 0 0-.419-2.216 4.61 4.61 0 0 0-2.633-2.633 6.606 6.606 0 0 0-2.186-.42c-.962-.043-1.267-.055-3.709-.055s-2.755 0-3.71.055a6.606 6.606 0 0 0-2.185.42 4.607 4.607 0 0 0-2.633 2.633 6.554 6.554 0 0 0-.419 2.185c-.043.963-.056 1.268-.056 3.71s0 2.754.056 3.71c.015.748.156 1.486.419 2.187a4.61 4.61 0 0 0 2.634 2.632 6.584 6.584 0 0 0 2.185.45c.963.043 1.268.056 3.71.056s2.755 0 3.71-.056a6.59 6.59 0 0 0 2.186-.419 4.615 4.615 0 0 0 2.633-2.633c.263-.7.404-1.438.419-2.187.043-.962.056-1.267.056-3.71-.002-2.442-.002-2.752-.058-3.709zm-8.953 8.297c-2.554 0-4.623-2.069-4.623-4.623s2.069-4.623 4.623-4.623a4.623 4.623 0 0 1 0 9.246zm4.807-8.339a1.077 1.077 0 0 1-1.078-1.078 1.077 1.077 0 1 1 2.155 0c0 .596-.482 1.078-1.077 1.078z"
+                    ></path>
+                    <circle cx="11.994" cy="11.979" r="3.003"></circle>
+                  </svg>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="M13.397 20.997v-8.196h2.765l.411-3.209h-3.176V7.548c0-.926.258-1.56 1.587-1.56h1.684V3.127A22.336 22.336 0 0 0 14.201 3c-2.444 0-4.122 1.492-4.122 4.231v2.355H7.332v3.209h2.753v8.202h3.312z"
+                    ></path>
+                  </svg>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="M21.579 6.855c.14-.465 0-.806-.662-.806h-2.193c-.558 0-.813.295-.953.619 0 0-1.115 2.719-2.695 4.482-.51.513-.743.675-1.021.675-.139 0-.341-.162-.341-.627V6.855c0-.558-.161-.806-.626-.806H9.642c-.348 0-.558.258-.558.504 0 .528.79.65.871 2.138v3.228c0 .707-.127.836-.407.836-.743 0-2.551-2.729-3.624-5.853-.209-.607-.42-.852-.98-.852H2.752c-.627 0-.752.295-.752.619 0 .582.743 3.462 3.461 7.271 1.812 2.601 4.363 4.011 6.687 4.011 1.393 0 1.565-.313 1.565-.853v-1.966c0-.626.133-.752.574-.752.324 0 .882.164 2.183 1.417 1.486 1.486 1.732 2.153 2.567 2.153h2.192c.626 0 .939-.313.759-.931-.197-.615-.907-1.51-1.849-2.569-.512-.604-1.277-1.254-1.51-1.579-.325-.419-.231-.604 0-.976.001.001 2.672-3.761 2.95-5.04z"
+                    ></path>
+                  </svg>
+                  <svg
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="17"
+                    height="3"
+                    viewBox="0 0 17 3"
+                    fill="none"
+                  >
+                    <path
+                      d="M3 1.5C3 2.32843 2.32843 3 1.5 3C0.671573 3 0 2.32843 0 1.5C0 0.671573 0.671573 0 1.5 0C2.32843 0 3 0.671573 3 1.5Z"
+                      fill="#6D7692"
+                    />
+                    <path
+                      d="M3 1.5C3 2.32843 2.32843 3 1.5 3C0.671573 3 0 2.32843 0 1.5C0 0.671573 0.671573 0 1.5 0C2.32843 0 3 0.671573 3 1.5Z"
+                      fill="#6D7692"
+                    />
+                    <path
+                      d="M3 1.5C3 2.32843 2.32843 3 1.5 3C0.671573 3 0 2.32843 0 1.5C0 0.671573 0.671573 0 1.5 0C2.32843 0 3 0.671573 3 1.5Z"
+                      fill="#6D7692"
+                    />
+                    <path
+                      d="M10 1.5C10 2.32843 9.32843 3 8.5 3C7.67157 3 7 2.32843 7 1.5C7 0.671573 7.67157 0 8.5 0C9.32843 0 10 0.671573 10 1.5Z"
+                      fill="#6D7692"
+                    />
+                    <path
+                      d="M10 1.5C10 2.32843 9.32843 3 8.5 3C7.67157 3 7 2.32843 7 1.5C7 0.671573 7.67157 0 8.5 0C9.32843 0 10 0.671573 10 1.5Z"
+                      fill="#6D7692"
+                    />
+                    <path
+                      d="M10 1.5C10 2.32843 9.32843 3 8.5 3C7.67157 3 7 2.32843 7 1.5C7 0.671573 7.67157 0 8.5 0C9.32843 0 10 0.671573 10 1.5Z"
+                      fill="#6D7692"
+                    />
+                    <path
+                      d="M17 1.5C17 2.32843 16.3284 3 15.5 3C14.6716 3 14 2.32843 14 1.5C14 0.671573 14.6716 0 15.5 0C16.3284 0 17 0.671573 17 1.5Z"
+                      fill="#6D7692"
+                    />
+                    <path
+                      d="M17 1.5C17 2.32843 16.3284 3 15.5 3C14.6716 3 14 2.32843 14 1.5C14 0.671573 14.6716 0 15.5 0C16.3284 0 17 0.671573 17 1.5Z"
+                      fill="#6D7692"
+                    />
+                    <path
+                      d="M17 1.5C17 2.32843 16.3284 3 15.5 3C14.6716 3 14 2.32843 14 1.5C14 0.671573 14.6716 0 15.5 0C16.3284 0 17 0.671573 17 1.5Z"
+                      fill="#6D7692"
+                    />
+                  </svg>
+                </div>
+              </div>
+
+              <div class="rating-degree">
+                <div class="like-dislike">
+                  <div class="like">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="27"
+                      height="26"
+                      viewBox="0 0 27 26"
+                      fill="none"
+                    >
+                      <g clip-path="url(#clip0_1_1775)">
+                        <path
+                          d="M6.23803 12.262H3.18512C2.76363 12.262 2.42188 12.6037 2.42188 13.0252V25.2366C2.42188 25.6581 2.76358 25.9999 3.18512 25.9999H6.23798C6.65946 25.9999 7.00122 25.6582 7.00122 25.2366V13.0252C7.00122 12.6037 6.65956 12.262 6.23803 12.262Z"
+                          fill="white"
+                        />
+                        <path
+                          d="M25.3049 14.2852C25.1703 13.1012 24.0643 12.2621 22.8727 12.2621H16.9225C17.4281 11.3566 17.6996 8.79556 17.6875 7.74937C17.6676 6.01763 16.2335 4.62988 14.5017 4.62988H13.8719C13.45 4.62988 13.1086 4.97123 13.1086 5.39312C13.1086 7.15802 12.4214 10.3436 11.1253 11.6398C10.253 12.5121 9.50719 12.8282 8.5293 13.317V24.769C10.0265 25.2681 11.9274 26.0001 14.8248 26.0001H19.8174C21.4625 26.0001 22.7437 24.4765 22.1062 22.8667C23.0774 22.6021 23.7937 21.7114 23.7937 20.6575C23.7937 20.3601 23.7363 20.0754 23.6327 19.8138C25.2693 19.3679 25.8717 17.3471 24.7358 16.0782C25.1531 15.612 25.3833 14.9743 25.3049 14.2852Z"
+                          fill="white"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_1_1775">
+                          <rect
+                            width="26"
+                            height="26"
+                            fill="white"
+                            transform="translate(0.871094)"
+                          />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </div>
+                  <div class="dislike-1">
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      width="26"
+                      height="27"
+                      viewBox="0 0 26 27"
+                      fill="none"
+                    >
+                      <g clip-path="url(#clip0_1_1766)">
+                        <path
+                          d="M20.6331 14.6091L23.686 14.6091C24.1075 14.6091 24.4492 14.2674 24.4492 13.8459L24.4492 1.63445C24.4492 1.21296 24.1075 0.871204 23.686 0.871204L20.6331 0.871204C20.2116 0.871204 19.8699 1.21291 19.8699 1.63444L19.8699 13.8459C19.8699 14.2674 20.2115 14.6091 20.6331 14.6091Z"
+                          fill="white"
+                        />
+                        <path
+                          d="M1.56619 12.5859C1.70081 13.7698 2.80678 14.609 3.99836 14.609L9.94864 14.609C9.44296 15.5145 9.17153 18.0755 9.18357 19.1217C9.20353 20.8535 10.6376 22.2412 12.3694 22.2412L12.9992 22.2412C13.4211 22.2412 13.7625 21.8999 13.7625 21.478C13.7625 19.7131 14.4497 16.5275 15.7458 15.2313C16.6181 14.359 17.3639 14.0428 18.3418 13.5541L18.3418 2.10206C16.8446 1.60304 14.9437 0.871029 12.0463 0.871028L7.05365 0.871028C5.4086 0.871028 4.12739 2.39461 4.76485 4.00438C3.79366 4.26895 3.07744 5.15965 3.07744 6.21356C3.07744 6.51098 3.13482 6.79566 3.23842 7.05729C1.60179 7.5032 0.999374 9.52403 2.1353 10.7929C1.71798 11.2591 1.48784 11.8968 1.56619 12.5859Z"
+                          fill="white"
+                        />
+                      </g>
+                      <defs>
+                        <clipPath id="clip0_1_1766">
+                          <rect
+                            width="26"
+                            height="26"
+                            fill="white"
+                            transform="translate(26 26.8711) rotate(-180)"
+                          />
+                        </clipPath>
+                      </defs>
+                    </svg>
+                  </div>
+                </div>
+                <div class="numbers">
+                  <p>3 245</p>
+                  <p>420</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="aside-section">
+        <div class="container">
+          <div class="aside-main">
+            <div class="aside-row"></div>
+            <div class="aside-boxes">
+              <div class="aside-box-1">
+                <img src="./images/main/mulan-mov.png" alt="#" />
+                <p>Мулан</p>
+                <div class="mulan-par">
+                  <img
+                    class="mulan-btn"
+                    src="./images/main/button.svg"
+                    alt="#"
+                  />
+                </div>
+              </div>
+              <div class="aside-box-1">
+                <img src="./images/main/forsaj-mov.png" alt="#" />
+                <p>Форсаж 9</p>
+                <div class="mulan-par">
+                  <img
+                    class="mulan-btn"
+                    src="./images/main/button.svg"
+                    alt="#"
+                  />
+                </div>
+              </div>
+              <div class="aside-box-1">
+                <img src="./images/main/qora beva -mov.png" alt="#" />
+                <p>Чёрная Вдова</p>
+                <div class="mulan-par">
+                  <img
+                    class="mulan-btn"
+                    src="./images/main/button.svg"
+                    alt="#"
+                  />
+                </div>
+              </div>
+              <div class="aside-box-1">
+                <img src="./images/main/jimjitlik-mov.png" alt="#" />
+                <p>Тихое место 2</p>
+                <div class="mulan-par">
+                  <img
+                    class="mulan-btn"
+                    src="./images/main/button.svg"
+                    alt="#"
+                  />
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="about-section">
+        <div class="container">
+          <div class="about-main">
+            <div class="about-title">
+              <div class="about-name">Популярные фильмы</div>
+              <div class="about-middle">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="54"
+                  height="2"
+                  viewBox="0 0 54 2"
+                  fill="none"
+                >
+                  <path
+                    d="M1 1H52.5"
+                    stroke="white"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                  />
+                </svg>
+              </div>
+              <div class="about-links">
+                <a href="#" class="about-link">Всё время </a>
+                <a href="#" class="about-link">2020 </a>
+                <a href="#" class="about-link"> 2019</a>
+                <a href="#" class="about-link">2018 </a>
+                <a href="#" class="about-link">2017 </a>
+                <a href="#" class="about-link">2016 </a>
+                <a href="#" class="about-link">2015 </a>
+              </div>
+            </div>
+
+            <div class="owl-carousel owl-theme">
+              <div class="item">
+                <div class="about-box-1">
+                  <img src="./images/main/image 2.png" alt="" />
+                  <p class="pobeg">Джокер</p>
+                  <p class="triler">Триллер, драма, криминал</p>
+                  <div class="rating-about"><p>8.50</p></div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="about-box-1">
+                  <img src="./images/main/oyinchoqlar.png" alt="" />
+                  <p class="pobeg">История игрушек 4</p>
+                  <p class="triler">
+                    Мультфильм, фэнтези, комедия, приключения ...
+                  </p>
+                  <div class="rating-about"><p>7.80</p></div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="about-box-1">
+                  <img src="./images/main/gollivud.png" alt="" />
+                  <p class="pobeg">Однажды в… Голливуде</p>
+                  <p class="triler">Драма, комедия</p>
+                  <div class="rating-about"><p>7.70</p></div>
+                </div>
+              </div>
+              <div class="item">
+                <div class="about-box-1">
+                  <img src="./images/main/quyosh.png" alt="" />
+                  <p class="pobeg">Солнцестояние</p>
+                  <p class="triler">Ужасы, триллер, драма</p>
+                  <div class="rating-about"><p>7.10</p></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
     <footer></footer>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"
+      integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"
+      integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <script>
+      $(".owl-carousel").owlCarousel({
+        loop: true,
+        margin: 10,
+        nav: true,
+        autoplay: true,
+        autoplayTimeout: 2000,
+        responsive: {
+          0: {
+            items: 1,
+          },
+          600: {
+            items: 3,
+          },
+          1000: {
+            items: 4,
+          },
+        },
+      });
+    </script>
   </body>
 </html>
-<!-- Salompu -->
